<resources>
    <string name="app_name">Njxfuture</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">LEARN</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="title_more">MORE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_message"><![CDATA[On 8-Mar, join this in-person workshop & Learn to generate your own options buying signals. Book your seat now. https://www.quantsapp.com/learn/workshop/optionsworkshop?product=free_event_mumbai_08032024]]></string>
    <string name="valid_till_na">VALID TILL NA</string>
    <string name="buy_subscriptions">Buy Subscriptions</string>
    <string name="quantsapp_web_desktop">Quantsapp Web / Desktop</string>
    <string name="login_with_touch_id">Login With Touch ID</string>
    <string name="my_tickets">My Tickets</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="have_a_referral_code">Have a Referral Code</string>
    <string name="rewards_transaction_history"><![CDATA[Rewards & Transaction History]]></string>
    <string name="events">Events</string>
    <string name="webinars">Webinars</string>
    <string name="media">Media</string>
    <string name="articles">Articles</string>
    <string name="strategies">Strategies</string>
    <string name="demo_videos">Demo Videos</string>
    <string name="classroom">Classroom</string>
    <string name="courses">Courses</string>
    <string name="market_brief">Market Brief</string>
    <string name="option_club">Option Club</string>
    <string name="articles1">ARTICLES</string>
    <string name="edit_details">Edit Details</string>
    <string name="user">User</string>
    <string name="account">ACCOUNT</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">EMAIL</string>
    <string name="add_email">ADD EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="mobile_no">MOBILE NO.</string>
    <string name="verify_via_sms">Verify via SMS</string>
    <string name="gst_no">GST NO.</string>
    <string name="option_platinum">Option Platinum</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="help">Help!</string>
    <string name="enter_password">Enter Password</string>
    <string name="add_gst_no_here">Add Gst No. here..</string>
    <string name="register">Register</string>
    <string name="enter_mail">Enter Mail</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="verified">Verified</string>
    <string name="enter_name">Enter Name</string>
    <string name="create_account">Create Account</string>
    <string name="general">General</string>
    <string name="mtm_alerts">MTM Alerts</string>
    <string name="advisory">Advisory</string>
    <string name="all">All</string>
    <string name="events1">EVENTS</string>
    <string name="webinars1">WEBINARS</string>
    <string name="media1">MEDIA</string>
    <string name="strategies1">STRATEGIES</string>
    <string name="demo_videos1">DEMO VIDEOS</string>
    <string name="courses1">COURSES</string>
    <string name="market_brief1">MARKET BRIEF</string>
    <string name="option_club1">OPTION CLUB</string>
    <string name="classroom1">CLASSROOM</string>
    <string name="image">Image</string>
    <string name="actions">Actions</string>
    <string name="steps">Steps</string>
    <string name="this_is_simple_demo_text">This is Simple Demo text</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_gst_no">Enter GST no.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="profile">PROFILE</string>
    <string name="raise_view_queries">Raise/View Queries</string>
    <string name="write_email_to_us">Write Email to Us</string>
    <string name="connect_on_whatsapp">Connect on WhatsApp</string>
    <string name="connect_on_instagram">Connect on Instagram</string>
    <string name="connect_on_facebook">Connect on Facebook</string>
    <string name="connect_on_twitter">Connect on Twitter</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us1">CONTACT US</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="linkdin">LinkdIn</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
</resources>