<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_login_box"
            android:orientation="vertical"

            android:padding="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="30sp"
                android:text="@string/sign_in"
                android:textColor="@color/dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:paddingVertical="10sp"
                android:textColorHint="@color/grey"
                android:autofillHints="@string/phone_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:paddingVertical="10sp"
                android:textColorHint="@color/grey"
                android:autofillHints="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/gradient_button"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingVertical="20sp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/register_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>